# china_charge_kf

./: .dockerignore  .env.example  .gitattributes  .gitignore  06-customer-feedback-flow.md  AI 健康咨询模块产品与工程设计边界文件.md  CLAUDE.md  README.md  dify_workflow_api说明文档.md  docker-compose.yml  phase1交付结果.md  二阶段批次1改造计划.md  二阶段架构图详解.md  二阶段架构设计蓝图.md  健康相关问题记录.md  多维表格自动化插件开发指南.md  试运行节点追踪记录.md
Workflow-China_charge_seriver-draft-9380/: DEPLOY_INSTRUCTIONS-charge.md  DEPLOY_INSTRUCTIONS.md  MANIFEST.md  MANIFEST.yml
backend/: .dockerignore  .env.dify-consult.example  .env.dify.example  .env.example  Dockerfile  Dockerfile.dify  README.md  requirements.txt
docs/: DEPLOY.md  HEALTH_CONSULT.md  IMAGE_REPLY.md  bugtrack-relational-architecture.md
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: build_kb_doc.py  build_manifest.py  deploy.sh  deploy_v2_scene_classifier.py  extract_images.py  rename_and_view.py  set_oss_cors.py  ssh_deploy.py  upload_kb_images.py
shared/: compliance.yaml
tools/: build_charge_workflow.py  deploy_frontend.py  deploy_inline.py  fix_bone_density_done.py  fix_dynamic_bone_density_questions.py  fix_no_hardcode.py
tools/dify_workflow_toolkit/: README.md  pyproject.toml
tools/dify_workflow_toolkit/dify_workflow_toolkit/: __init__.py  builder.py  cli.py  deployer.py  ssh_client.py  verifier.py  yml_validator.py
tools/dify_workflow_toolkit/examples/: health_consult_v2.py  health_consult_v2.yml
tools/dify_workflow_toolkit/tests/: test_builder.py  test_example.py
(+219 files in other folders)
